# opencv_face

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/administrator/study/: ExampleInstrumentedTest.java
app/src/main/java/com/example/administrator/study/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/administrator/study/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mylibrary/: build.gradle
mylibrary/src/main/cpp/: native-lib.cpp
mylibrary/src/main/java/com/example/mylibrary/: FaceFactory.java  JNITest.java  MainActivity3.java
mylibrary/src/main/res/layout/: activity_main.xml
